First Bar added

--- a/servicios/index.html
+++ b/servicios/index.html
@@ -62,7 +62,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <!-- Componentes -->
     <link rel="stylesheet" href="/styles/Variables.css">
-    <link rel="stylesheet" href="/styles/Servicios2.css">
+    <link rel="stylesheet" href="/styles/Servicios.css">
     <link rel="stylesheet" href="/styles/Buttons.css">
     <link rel="stylesheet" href="/styles/Menu.css">
     <link rel="stylesheet" href="/styles/WhatsAppButton.css">
